--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,14 +7,46 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>Tienda</title>
         <meta charset="UTF-8">
-    </head>
-    <body>
-        <a href="Ejemplo 6.html">Back</a> / <a href="index.html">Home</a> /  <a href="Ejemplo 2.html">Next</a>
-        <h1>Principal</h1>
-        <p>hola mundo</p>
-        <h2>Adios mundo</h2>
-        <p>La contaminación del agua se da cuando la composición de ésta se ve alterada por la presencia de alguna sustancia o agente contaminante. Es entonces cuando hablamos de agua contaminada. que es aquella que no solo no reúne las condiciones necesarias para ser utilizada para el consumo sino también, resulta nociva para los ecosistemas.</p>
-<p style="text-align:center ">Cada vez es más común que lugares de agua limpia y cristalina como las aguas del rio Ganges se conviertan en un símbolo de la contaminación hídrica en el planeta. Y es que la contaminación del agua afecta ya a uno de cada tres habitantes, según estimaciones de la Organización de las Naciones Unidas (ONU).</p>
-<p style="text-align: right">Dentro de las causas de la contaminación ambiental, la alteración del agua por agentes contaminantes es una de las más graves dado la importancia de este recurso para la vida en el planeta.</p>
-    </body>
+    <header>
+            <h1 style="background-color: black; color: #00cc00; text-align: center">TechShop</h1>
+        </header>
+        <nav>
+            <a href="ejemplo6.html">Back</a> | <a href="index.html">Home</a> | <a href="ejemplo2.html">Next</a>
+        </nav>
+        <aside>
+            <h2>Oferta del día</h2>
+            <p>Teclado Rustico</p>
+        </aside>
+        <section>
+            <h2>Bienvenidos</h2>
+            <p>Lista de productos</p>
+            <hr/>
+            <article>
+                <header><h3>Alienware 5600</h3></header>
+                <p>Inspirada en la película <cite>Aliens el séptimo pasajero</cite> ipsum dolor sit amet consectetur adipiscing elit nec, nunc curae luctus suscipit a mus posuere dui,<br/>pulvinar mi egestas at molestie venenatis semper. Pellentesque rutrum eget nisl aptent nostra, potenti facilisi nascetur urna tincidunt, montes fusce porta curabitur. Inceptos volutpat id nullam curae vivamus, semper auctor luctus pellentesque porttitor nibh, parturient aliquam fusce magnis. Nec ad ut pulvinar ultricies lobortis sollicitudin placerat tristique nisi, magna nullam non convallis est semper felis fringilla, cum faucibus torquent vehicula himenaeos morbi et malesuada.</p>
+                <figure>                    
+                    <img src="img/alienware.jpg" alt="imágen de equipo Alienware"/>
+                    <figcaption>La mejor para gamer</figcaption>
+                </figure>
+                <footer>Add</footer>
+            </article>
+            <article>
+                <header><h3>Cannon 4000</h3></header>
+                <p style="text-align: center">Aliquam viverra penatibus odio erat integer scelerisque in tincidunt, sociosqu dignissim venenatis ultrices sed nibh vestibulum tortor, malesuada donec hac placerat montes auctor justo. Cursus nisi purus malesuada quisque platea a mus pulvinar, dis phasellus mattis parturient neque quis primis, sed nulla tortor dignissim interdum ullamcorper sociosqu. Praesent pharetra bibendum purus velit diam auctor integer venenatis, turpis sociis egestas cubilia magnis duis vivamus, sollicitudin dis ad a curabitur lacinia arcu. Inceptos potenti nam augue volutpat rutrum habitant sollicitudin etiam dui habitasse penatibus at, urna semper mus fermentum commodo himenaeos ullamcorper netus proin non. Congue aliquam posuere himenaeos nisl massa nisi felis tincidunt porttitor, potenti vulputate dui ultricies tortor sodales in.</p>
+                <figure>
+                    <img src="img/cannon.jpg" alt="imágen de cámara fotográfica"/>
+                    <figcaption>Especial para paseos</figcaption>
+                </figure>
+                <footer>Add</footer>
+            </article>
+            <article>
+                <header><h3>Teclado Aspire</h3></header>
+                <p style="text-align: right">Sociis commodo tortor donec est aliquet lectus molestie nam mattis, turpis porttitor nisl semper vitae proin cubilia potenti bibendum, montes congue ultricies curae et dictumst dis class. Cursus dictumst rutrum augue cubilia laoreet non vitae fermentum iaculis, justo morbi convallis auctor condimentum lacus fringilla potenti sodales magnis, class metus per congue risus viverra aptent gravida.</p>
+                <figure>
+                    <img src="img/teclado.jpg" alt="imágen de teclado físico"/>
+                    <figcaption>Duradero</figcaption>
+                </figure>
+                <footer>Add</footer>
+            </article>
+        </section>
 </html>
