--- a/src/main/resources/static/Ejemplo 4.html
+++ b/src/main/resources/static/Ejemplo 4.html
@@ -9,7 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8">
     </head>
     <body>
-          <a href="Ejemplo 6.html">Back</a> / <a href="index.html">Home</a> /  <a href="Ejemplo 6.html">Next</a>
+          <a href="Ejemplo 6.html">Back</a> / <a href="indexProvicional.html">Home</a> /  <a href="Ejemplo 6.html">Next</a>
         <h1 style="background-color:black;color:#00cc00;text-alig:center">Principal</h1>
         <p>hola mundo</p>
         <h2>lista de compras</h2>
