--- a/src/main/resources/static/Ejemplo 6.html
+++ b/src/main/resources/static/Ejemplo 6.html
@@ -9,7 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8">
     </head>
     <body>
-          <a href="Ejemplo 5.html">Back</a> / <a href="index.html">Home</a> /  <a href="Ejemplo 2.html">Next</a>
+          <a href="Ejemplo 5.html">Back</a> / <a href="indexProvicional.html">Home</a> /  <a href="Ejemplo 2.html">Next</a>
         <h1>Principal</h1>
         <p>hola mundo</p>
         <h2>Adios mundo</h2>
