--- a/src/main/resources/static/audios.html
+++ b/src/main/resources/static/audios.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h1 style="background-color: black; color: #00cc00; text-align: center">TechShop</h1>
         </header>
         <nav>
-            <a href="ejemplo6.html">Back</a> | <a href="index.html">Home</a> | <a href="ejemplo2.html">Next</a>
+            <a href="ejemplo6.html">Back</a> | <a href="indexProvicional.html">Home</a> | <a href="ejemplo2.html">Next</a>
         </nav>
 
         <section>
