--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -7,7 +7,7 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo6.html">Back</a> | <a href="index.html">Home</a> | <a href="ejemplo3.html">Next</a>
+        <a href="ejemplo6.html">Back</a> | <a href="indexRespaldo.html">Home</a> | <a href="ejemplo3.html">Next</a>
         <h1 style="background-color: black; color: #00cc00; text-align: center">Ejemplo2</h1>
         <p>Este es el sistio web comercial de la tienda TechShop</p>
         <div style="color: blue">
