--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <a name="arriba"></a>
-        <a href="ejemplo4.html">Back</a> | <a href="index.html">Home</a> | <a href="ejemplo6.html">Next</a>
+        <a href="ejemplo4.html">Back</a> | <a href="indexRespaldo.html">Home</a> | <a href="ejemplo6.html">Next</a>
 
         <h1 style="background-color: black; color: #00cc00; text-align: center">Ejemplo5</h1>
         <p>Este es el sistio web comercial de la tienda TechShop</p>
