--- a/src/main/resources/static/ejemplo6.html
+++ b/src/main/resources/static/ejemplo6.html
@@ -7,7 +7,7 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo5.html">Back</a> | <a href="index.html">Home</a> | <a href="ejemplo2.html">Next</a>
+        <a href="ejemplo5.html">Back</a> | <a href="indexRespaldo.html">Home</a> | <a href="ejemplo2.html">Next</a>
         <h1 style="background-color: black; color: #00cc00; text-align: center">Ejemplo6</h1>
         <p>Este es el sitio web comercial de la tienda TechShop</p>
         <h2>Bienvenidos</h2>
